--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^0.24.0",
     "dotenv": "^10.0.0",
+    "google-auth-library": "^7.10.2",
     "googleapis": "^91.0.0",
     "nodemailer": "^6.7.0"
   }
