--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^10.0.0",
     "google-auth-library": "^7.10.2",
     "googleapis": "^91.0.0",
-    "nodemailer": "^6.7.0"
+    "nodemailer": "^6.7.0",
+    "nodemailer-smtp-transport": "^2.7.4"
   }
 }
